feat: Add Keycloak 26.x compatibility
- Updated KeycloakProperties.java for Spring Boot property binding
- Updated AuthenticationHandler.java for OAuth2 token handling
- Updated KeycloakAccessTokenExtractor.java for Keycloak 26.x tokens
- Updated OIDCClient.java for OIDC configuration
- Updated OIDCMetadataHolder.java for metadata handling
- Updated README.md with fork notice and changes

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>